--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "html-entities": "^2.3.3",
     "hylo-shared": "5.2.5",
     "i18next": "^22.0.5",
+    "intl-pluralrules": "^2.0.1",
     "lodash": "^4.17.21",
     "mixpanel-react-native": "^2.3.1",
     "moment-timezone": "^0.5.37",
