--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "react-native-clean-project": "^4.0.1",
     "react-native-version": "^4.0.0",
     "react-test-renderer": "18.2.0",
+    "reactotron-react-native": "^5.1.7",
     "redux-logger": "^3.0.6",
     "reselect-tools": "^0.0.7",
     "standard": "^17.0.0",
